2007-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ActionGroupToolbar.cs: Notify group changes to the
	  frontend.
	* libsteticui/ActionGroupEditSession.cs: Don't delay the creation of
	  the designer because when used in combination with the widget
	  designer, change events are subscribed since the begining

2007-07-10  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs: Fix NRE (bug #82052).

2007-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/ActionMenuItem.cs,
	  libstetic/editor/ActionToolItem.cs: Show menu items and tool
	  buttons insensitive when bound to an insensitive action. Fixes bug
	  #81810.

2007-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectViewBackend.cs: Cosmetic fixes.

2007-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilWidgetLibrary.cs: Return 2.4 target gtk version is
	  none is provided.
	* libsteticui/ApplicationBackend.cs, libsteticui/Application.cs,
	  libsteticui/ComponentType.cs: Added Library property to
	  ComponentType.
	* libsteticui/PluggableWidget.cs: The widget may be unrealized after
	  adding the notebook. Added a null check for this case. Fixes bug
	  #81977.

2007-06-27  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilWidgetLibrary.cs, libsteticui/Application.cs,
	  libsteticui/ComponentType.cs: When reading the component list of a
	  library, get the target version.
	* libsteticui/ApplicationBackend.cs: Properly report an error when
	  dropping a widget of a class that doesn't exist.
	* libstetic/WidgetLibrary.cs, libstetic/DND.cs: Added null check.

2007-06-27  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* libstetic/WidgetLibrary.cs: Added handling of
	an empty objects.xml file.

2007-06-22  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilWidgetLibrary.cs: When looking for widgets in a
	  library, ignore those without a palette category.
	* libsteticui/ApplicationBackend.cs: Added null check.